# mrv-lib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  config.yaml  pyproject.toml  run.py  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: paper1_representation_invariance.ipynb  paper2_resolution_invariance.ipynb  quickstart.ipynb
mrv_lib/: __init__.py  boundary.py  cli.py  metrics.py  scan.py
src/mrv/: __init__.py  pipeline.py
src/mrv/data/: __init__.py  factors.py  normalize.py  reader.py
src/mrv/models/: __init__.py  gmm.py  hmm.py
src/mrv/utils/: __init__.py  config.py  download.py  log.py
src/mrv/validator/: __init__.py  attribution.py  base.py  findings.py  metrics.py  monitor.py  rep.py  report.py  res.py
src/mrv_lib/: __init__.py  core.py
templates/: sr11_7_template.tex  template.tex
tests/: __init__.py  conftest.py  test_core.py  test_mrv.py  test_pipeline.py  test_version.py
tests/data/: test_factors.py  test_normalize.py  test_reader.py
tests/models/: test_models.py
tests/utils/: test_config.py
tests/validator/: test_attribution.py  test_base.py  test_findings.py  test_impact.py  test_metrics.py  test_monitor.py  test_rep.py  test_report.py  test_res.py
